fix(home-page): align logo horizontally

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -24,6 +24,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .header-logos {
